2003-05-31  Callum McKenzie  <callum@physics.otago.ac.nz>

	* Makefile.am (install-data-local): Implement setgid modifications
	(see gnome-games/ChangeLog).

2003-05-30  Callum McKenzie  <callum@physics.otago.ac.nz>

	* Makefile.am (scoredir): Changed score directory to fix bug
	#113968.

2003-04-30  Abel Cheung  <maddog@linux.org.hk>

	* ChangeLog: Convert to UTF-8.

2002-12-24 John Fleck <jfleck@inkstain.net>

	* help/C/glines.xml: add <figure> tags around screenshots
	so the links to them display correctly in Yelp

2002-12-11  Ross Burton  <ross@burtonini.com>

	* help/C/glines-C.omf:
	* help/C/glines.xml: More s/Gnome/GNOME/.

2002-11-27  Ross Burton  <ross@burtonini.com>

	* glines.c: s/Gnome/GNOME/, for #99683.

2002-11-21  Tim Musson  <trmusson@ihug.co.nz>

	* glines.c: (game_about_callback) (game_top_ten_callback) (game_over):
	No more multiple About dialogs, and Score dialog is now modal.
	(Bug #97320)

2002-11-18  Fernando Herrera <fherrera@onirica.com>

	* glines.desktop.in: add X-GNOME-BUGZILLA stuff

2002-11-18  Jeremy Browne  <jeremy@synonymous.ca>

	* glines.c: Changes to quit dialog for consistency with other parts of
	gnome-games package. (Bug #97321)

2002-11-10  Tim Musson <trmusson@ihug.co.nz>

	* glines.c: (field_expose_event): redraw more squares after expose
	events (fixes #97314)

2002-11-11  Ross Burton  <ross@burtonini.com>

	* glines.png: New icon contributed by Timothy Musson.

2002-09-20  Ross Burton  <ross@burtonini.com>

	* help/C/glines.xml: Fix paths to the images, closing #93386.

2002-08-23  Ross Burton  <ross@burtonini.com>

	* glines.c: Enable the high scores dialog. Patch from Andrew
	Sobala <andrew@sobala.net>, fixing #84235.

2002-07-14  Ross Burton  <ross@burtonini.com>

	* glines.c: Use g_snprintf() instead of snprintf() so that the
	OSF/1 compiler is happy (fixes #87800).

2002-06-19  Ross Burton  <ross@burtonini.com>

	* glines.c (main): Use the correct icon filename for the window
	icon.
