@@ -1,8 +1,8 @@
 SUBDIRS = help
 
-# This is awful but the scores directory is actually kept by libgnome
-# and it may not have the same prefix as us.
-scoredir=`pkg-config libgnome-2.0 --variable=prefix`/var/games
+
+
+
 pixmapdir = $(datadir)/pixmaps/glines
 icondir = $(datadir)/pixmaps
 Gamesdir = $(datadir)/applications
